# ibmdiagrams-mcp

./: .gitignore  README.md  pyproject.toml
src/ibmdiagrams_mcp/: __init__.py  catalog.py  prompts.py  resources.py  tools.py
