[project]
name = "ibmdiagrams-mcp"
version = "0.1.0"
description = "MCP server for generating IBM Cloud architecture diagrams using ibmdiagrams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "ibmdiagrams @ file:///../ibmdiagrams",
]

[project.scripts]
ibmdiagrams-mcp = "ibmdiagrams_mcp:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
